Disable api basepath
